--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,48 @@
-body {
-    background-color: aquamarine;
+/* RESET */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+/* UTILITIES */
+.flex {
+    display: flex;
+}
+
+/* COMMON */
+
+
+/* HEADER */
+.header-section {
+    background-color: orange;
+    /* DEBUG */
+    border: 1px solid orange;
+}
+
+/* NAVIGATION */
+.navigation {
+    /* DEBUG */
+    border: 1px solid red;
+}
+
+/* LOGO */
+.logo {
+    height: 150px;
+    /* DEBUG */
+    border: 1px solid red;
+
+}
+
+/* ACTIONS */
+.actions {
+    /* DEBUG */
+    border: 1px solid red;
+}
+
+
+/* MAIN */
+
+
+/* FOOTER */
