--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,39 +12,57 @@
 }
 
 /* COMMON */
-
 img {
     max-width: 100%;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 
 /* HEADER */
 .header-section {
     justify-content: space-around;
+    align-items: center;
     height: 80px;
-    background-color: orange;
+    background-color: rgb(255, 123, 0);
+    color: white;
     /* DEBUG */
-    border: 1px solid orange;
+    /* border: 1px solid orange; */
 }
 
 /* NAVIGATION */
 .navigation {
     /* DEBUG */
-    border: 1px solid red;
+    /* border: 1px solid red; */
+}
+
+ul {
+    gap: 20px;
 }
 
 /* LOGO */
 .logo {
-    width: 100px;
+    width: 180px;
     /* DEBUG */
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
 }
 
 /* ACTIONS */
 .actions {
     /* DEBUG */
-    border: 1px solid red;
+    /* border: 1px solid red; */
+}
+
+.icons {
+    gap: 10px;
 }
 
 
