--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,8 @@ a {
 
 /* HEADER */
 .header-section {
-    justify-content: space-around;
+    padding: 0 150px;
+    justify-content: space-between;
     align-items: center;
     height: 80px;
     background-color: rgb(255, 123, 0);
@@ -76,7 +77,7 @@ ul {
 /* MAIN */
 .main {
     justify-content: center;
-    padding: 50px 200px;
+    padding: 50px 150px;
     flex-wrap: wrap;
     gap: 20px;
 }
@@ -93,7 +94,9 @@ ul {
     border: 1px solid black;
 }
 
-.brand {}
+.brand {
+    font-size: small;
+}
 
 .name {
     text-transform: uppercase;
