--- a/CSS/style.css
+++ b/CSS/style.css
@@ -116,3 +116,15 @@ ul {
 }
 
 /* FOOTER */
+.footer {
+    justify-content: space-between;
+    padding: 0 150px;
+    align-items: center;
+    height: 100px;
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
+
+.info {
+    margin-top: 10px;
+}
