--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,6 +32,11 @@ a {
     border: 1px solid red;
 }
 
+.image1 {
+    position: relative;
+    z-index: 5;
+}
+
 .image2 {
     position: absolute;
     top: 0;
@@ -47,6 +52,7 @@ a {
     background-color: rgb(255, 123, 0);
     color: white;
     position: fixed;
+    z-index: 10;
     width: 100%;
     /* DEBUG */
     /* border: 1px solid orange; */
