--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,8 @@
     display: flex;
 }
 
+
+
 /* COMMON */
 img {
     max-width: 100%;
@@ -23,6 +25,10 @@ li {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+li:hover a {
+    text-decoration: underline;
 }
 
 .card {
@@ -65,6 +71,8 @@ a {
     /* DEBUG */
     /* border: 1px solid red; */
 }
+
+
 
 ul {
     gap: 20px;
